Closed
Bug 151983
Opened 24 years ago
Closed 24 years ago
ASSERTION: imgLoader::LoadImage -- NULL URI pointer: 'aURI'
Categories
(Core :: Layout: Images, Video, and HTML Frames, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: bernd_mozilla, Assigned: pavlov)
References
()
Details
Attachments
(1 file, 1 obsolete file)
|
700 bytes,
patch
|
paper
:
review+
tor
:
superreview+
|
Details | Diff | Splinter Review |
the testcase from the layout regression tests fires this assertion.
###!!! ASSERTION: imgLoader::LoadImage -- NULL URI pointer: 'aURI', file imgLoad
er.cpp, line 120
I think
http://lxr.mozilla.org/seamonkey/source/layout/html/base/src/nsImageFrame.cpp#1972
should check that uri is not Null before calling imagelib.
Comment 2•24 years ago
|
||
Comment on attachment 87776 [details] [diff] [review]
patch
Do these two things and I'll r=
2) put 2nd !uri check inside 1st !uri if scope. No need to check it twice if
it was valid in the first place.
1) space between the if and (
I will not work on this as I am blocked by bug 154667
Attachment #87776 -
Attachment is obsolete: true
Comment 5•24 years ago
|
||
Comment on attachment 89587 [details] [diff] [review]
revised patch
r=paper
Attachment #89587 -
Flags: review+
Comment 6•24 years ago
|
||
so um... this patch is more than two months old now. has anyone asked for
super-review? cc'ing tor, since this bug is in "Image: Layout", and tor is
imagelib sr.
bernd, maybe you'd like to take this bug as you created the patch.
(interestingly, this patch still applies after two months)
Comment on attachment 89587 [details] [diff] [review]
revised patch
sr=tor
Attachment #89587 -
Flags: superreview+
Comment 8•24 years ago
|
||
ok so I checked this in now. bernd, I hope you don't mind..
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
Updated•8 years ago
|
Product: Core → Core Graveyard
Updated•8 years ago
|
Product: Core Graveyard → Core
You need to log in
before you can comment on or make changes to this bug.
Description
•