bug 151983 patch by bernd.mielke@snafu.de r=paper sr=tor ASSERTION: imgLoader::LoadImage -- NULL URI pointer: 'aURI'